# MiniSQL

code/: README.md
code/src/MiniSQL-Clion/: API.h  BPlusTree.h  CMakeLists.txt  Interpreter.cpp  test2.sql
code/src/MiniSQL-VS2017/MiniSQL/: CatalogManager.cpp  IndexManager.cpp  Interpreter.cpp  MiniSQL.vcxproj  MiniSQL.vcxproj.filters  ReadMe.txt  stdafx.cpp
code/src/MiniSQL-VS2017/MiniSQL/Debug/: vc141.idb
code/src/MiniSQL-VS2017/MiniSQL/Debug/MiniSQL.tlog/: CL.command.1.tlog  CL.write.1.tlog  MiniSQL.lastbuildstate  link.command.1.tlog  link.write.1.tlog
code/src/MiniSQL-VS2017/MiniSQL/x64/Release/MiniSQL.tlog/: CL.command.1.tlog  MiniSQL.write.1u.tlog  link.command.1.tlog
code/src/MiniSQL-VS2017/x64/Release/: MiniSQL.ipdb
code/src/code/: BufferManager.cpp  CatalogManager.cpp  DataStruct.h  IndexManager.cpp  RecordManager.cpp
src/MiniSQL-Clion/: main.cpp
src/MiniSQL-VS2017/: MiniSQL.sln
src/MiniSQL-VS2017/Debug/: MiniSQL.ilk
src/MiniSQL-VS2017/MiniSQL/: API.cpp  BufferManager.cpp  BufferManager.h  BufferStream.h  RecordManager.cpp  RecordManager.h  Uncopyable.h  main.cpp
src/MiniSQL-VS2017/MiniSQL/Debug/: MiniSQL.pch
src/MiniSQL-VS2017/MiniSQL/Debug/MiniSQL.tlog/: CL.read.1.tlog  link.read.1.tlog
src/MiniSQL-VS2017/MiniSQL/x64/Release/: MiniSQL.pch
src/MiniSQL-VS2017/MiniSQL/x64/Release/MiniSQL.tlog/: CL.read.1.tlog  CL.write.1.tlog  MiniSQL.lastbuildstate  link.read.1.tlog  link.write.1.tlog
src/code/: API.cpp  CatalogManager.h  IndexManager.h  Interpreter.h
test/: test.sql  test_perform.sql  test_redirection.sql
